removed api key

--- a/experimental code/dark_sky_api_test.ipynb
+++ b/experimental code/dark_sky_api_test.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = 'e264afc31fb0864b2179a730ca275738'"
+    "API_KEY = 'API KEY HERE'"
    ]
   },
   {
