edits with config not working

--- a/experimental code/dark_sky_api_test.ipynb
+++ b/experimental code/dark_sky_api_test.ipynb
@@ -2,12 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#source: https://github.com/Detrous/darksky"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from darksky.api import DarkSky, DarkSkyAsync\n",
-    "from darksky.types import languages, units, weather"
+    "from darksky.types import languages, units, weather\n",
+    "import config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'config' has no attribute 'darksky_api'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-3edd4104ad8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mapi_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdarksky_api\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'config' has no attribute 'darksky_api'"
+     ]
+    }
+   ],
+   "source": [
+    "apikey = config.darksky_api"
    ]
   },
   {
@@ -54,7 +85,7 @@
     }
    ],
    "source": [
-    "forecast = darksky.DailyForecastItem(\n",
+    "forecast = darksky.get_time_machine_forecast(\n",
     "    latitude, longitude,\n",
     "    extend=False, # default `False`\n",
     "    lang=languages.ENGLISH, # default `ENGLISH`\n",
