added a link to attributes

--- a/experimental code/darksky2.ipynb
+++ b/experimental code/darksky2.ipynb
@@ -7,6 +7,8 @@
     "### Copied Code From This location:\n",
     "https://pypi.org/project/darkskylib/\n",
     "\n",
+    "### Dark sky attributes\n",
+    "https://darksky.net/dev/docs#api-request-types\n",
     "\n",
     "### pip uninstall darksky\n",
     "### pip install darkskylib\n"
@@ -14,54 +16,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from darksky import forecast\n",
+    "RAPIDAPI_KEY  = \"need your key\"\n",
     "\n",
-    "RAPIDAPI_KEY  = \"add your here\""
+    "#boston\n",
+    "lat = 42.3601   \n",
+    "lon = -71.058  \n",
+    "\n",
+    "#changed to baltimore\n",
+    "lat = 39.299236 \n",
+    "lon = -76.609383 \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'darksky.forecast.Forecast'>\n",
-      "1551859200\n",
-      "21.88\n",
-      "21.88\n",
-      "0.51\n",
-      "1013.6\n",
-      "9.09\n"
+      "2020-04-01T12:00:00\n",
+      "48.9\n",
+      "0.63\n",
+      "1010.5\n",
+      "9.04\n",
+      "rain\n"
      ]
     }
    ],
    "source": [
-    "boston = forecast(RAPIDAPI_KEY, 42.3601, -71.0589)\n",
-    "\n",
-    "print(type(boston))\n",
-    "\n",
-    "BOSTON = RAPIDAPI_KEY, 42.3601, -71.0589\n",
+    "boston = forecast(RAPIDAPI_KEY, lat, lon)\n",
+    "BOSTON = RAPIDAPI_KEY, lat, lon\n",
     "\n",
     "from datetime import datetime as dt\n",
-    "t = dt(2019, 3, 6, 3).isoformat() #year, month, day, hour\n",
+    "strDate = dt(2020, 4, 1, 12).isoformat() #year, month, day, hour\n",
     "\n",
-    "boston = forecast(*BOSTON, time=t)\n",
-    "print(boston.time)\n",
+    "print(strDate)\n",
     "\n",
-    "print(boston['currently']['temperature'])\n",
+    "boston = forecast(*BOSTON, time=strDate)\n",
+    "\n",
+    "#print(boston['currently']['temperature']) this works also\n",
     "print(boston.temperature)\n",
     "print(boston.humidity)\n",
     "print(boston.pressure)\n",
     "print(boston.windSpeed)\n",
+    "print(boston.precipType)\n",
     "             "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
