Updated Cluster Notebook with additional guidance links

--- a/experimental code/ClusteringGeo.ipynb
+++ b/experimental code/ClusteringGeo.ipynb
@@ -4,15 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clustering Notebook - \n",
+    "# Clustering Notebook - \n",
+    "\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.cluster.DBSCAN.html\n",
+    "\n",
+    "https://medium.com/@agarwalvibhor84/lets-cluster-data-points-using-dbscan-278c5459bee5\n",
+    "\n",
     "https://github.com/gboeing/2014-summer-travels/blob/master/clustering-scikitlearn.ipynb\n",
     "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.cluster.DBSCAN.html\n"
+    "https://scikit-learn.org/stable/modules/generated/sklearn.cluster.DBSCAN.html\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Load File. \n",
-    "emdata = pd.read_csv('/Users/AlfHaugen/Python/Wildfire_Data/Missoula Emisions Data RDS-2017-0039/Emissions_Year/emissions_year2003to2015.csv')"
+    "emdata = pd.read_csv('/Users/AlfHaugen/Python/Wildfire_Data/9 Missoula Emisions Data RDS-2017-0039/Emissions_Year/emissions_year2003to2015.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +181,7 @@
        "[2 rows x 22 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -243,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clustered 104,726 points down to 1,162 clusters, for 98.9% compression in 20.30 seconds\n",
+      "Clustered 104,726 points down to 1,162 clusters, for 98.9% compression in 20.16 seconds\n",
       "Silhouette coefficient: 0.453\n"
      ]
     }
@@ -271,12 +277,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# turn the clusters into a pandas series, where each element is a cluster of points\n",
     "clusters = pd.Series([coords[cluster_labels==n] for n in range(num_clusters)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1152    [[46.7623, -120.5592], [46.7629, -120.556], [4...\n",
+       "1153    [[47.2678, -117.706], [47.2695, -117.71], [47....\n",
+       "1154                               [[47.7581, -114.6923]]\n",
+       "1155         [[47.4094, -117.2505], [47.4116, -117.2513]]\n",
+       "1156    [[46.8316, -120.6903], [46.8322, -120.6872], [...\n",
+       "1157    [[48.9019, -113.1811], [48.9023, -113.1778], [...\n",
+       "1158    [[48.608999999999995, -116.40299999999999], [4...\n",
+       "1159                               [[48.2908, -120.0989]]\n",
+       "1160    [[48.7921, -119.5897], [48.7937, -119.5938], [...\n",
+       "1161    [[48.9679, -119.6454], [48.9696, -119.6495], [...\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print clusters to see what's in it:: ok, looks like all the coordindates for cluster. \n",
+    "clusters.tail(10)"
    ]
   },
   {
@@ -290,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +681,6 @@
     "# pull row from original data set where lat/lon match the lat/lon of each row of representative points\n",
     "# that way we get the full details like city, country, and date from the original dataframe\n",
     "\n",
-    "#emyear2005 = emdata[(emdata.year == 2005) & (emdata.doy > 181) & (emdata.doy < 213)]\n",
     "rs = rep_points.apply(lambda row: emyear2005[(emyear2005['latitude']==row['latitude']) & (emyear2005['longitude']==row['longitude'])].iloc[0], axis=1)\n",
     "rs.to_csv('/Users/AlfHaugen/Python/Wildfire_Data/Predicting-Wildfires/ClusterDBScan_Emissions2005.csv', encoding='utf-8')\n",
     "rs.tail()"
