Further results from clustering

--- a/experimental code/ClusteringGeo.ipynb
+++ b/experimental code/ClusteringGeo.ipynb
@@ -839,7 +839,7 @@
     "Silhouette coefficient: 0.269\n",
     "##### 2008 - Clustered 440,888 points down to 9,264 clusters, for 97.9% compression in 75.88 seconds\n",
     "Silhouette coefficient: 0.444\n",
-    "##### 2009 - \n",
+    "##### 2009 - Need to rerun - HH\n",
     "##### 2010 - Clustered 270,486 points down to 8,237 clusters, for 97.0% compression in 30.41 seconds\n",
     "Silhouette coefficient: 0.512\n",
     "##### 2011 - Clustered 770,255 points down to 10,554 clusters, for 98.6% compression in 137.69 seconds\n",
