updating to use config py file

--- a/experimental code/CloudDBConnectTest.ipynb
+++ b/experimental code/CloudDBConnectTest.ipynb
@@ -11,6 +11,9 @@
     "\n",
     "### Add your IP to the siteground:\n",
     "<i> https://tools.siteground.com/mysql-access?siteId=TFFud1lYTVBJZz09 <i>\n",
+    "    \n",
+    "### Make sure you have the config.py file in the same folder as the code\n",
+    "note not sure how this will work once code is moved out of experimental folder how to reference the .py file in other folders\n",
     "\n",
     "    \n",
     "### Code Steps\n",
@@ -23,24 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import mysql.connector\n",
     "from mysql.connector import Error\n",
     "import pandas as pd\n",
+    "import config\n",
     "\n",
-    "_host = \"35.209.104.184\"\n",
-    "_database = \"db27bvsdruzh45\"\n",
-    "_user = \"u4tf66ycwfadk\"\n",
-    "_password = \"fireteam#123\"\n",
+    "_host = config.db_host\n",
+    "_database = config.db_name\n",
+    "_user = config.db_user\n",
+    "_password = config.db_pass\n",
     "_query = \"select * from pet\" #Somebody created a pet table\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
