--- a/experimental code/TestFileDBConnect.ipynb
+++ b/experimental code/TestFileDBConnect.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,18 +31,18 @@
     "from mysql.connector import Error\n",
     "import configparser\n",
     "import pandas as pd\n",
-    "import os\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def readConfig():  #return a dict\n",
+    "def readConfig():  #return a dict of config params\n",
     "\n",
     "    try:\n",
     "        config = configparser.ConfigParser()\n",
@@ -72,13 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dbConnect():\n",
+    "def dbConnect(configDict):\n",
     "\n",
-    "    configDict = readConfig()\n",
     "   \n",
     "    try:\n",
     "   \n",
@@ -88,7 +87,6 @@
     "                                         user = configDict['user'],\n",
     "                                         password = configDict['password'])\n",
     "        \n",
-    "        print(\"....Connection function executed\")\n",
     "        \n",
     "        if connection.is_connected():\n",
     "            db_Info = connection.get_server_info()\n",
@@ -97,22 +95,40 @@
     "        cursor = connection.cursor()\n",
     "        cursor.execute(\"select database();\")\n",
     "        record = cursor.fetchone()\n",
-    "        print(\"You're connected to database: \", record)\n",
+    "        cursor.close()\n",
+    "        print(\"\\nSuccessfully connected to database: \", record)\n",
     "        \n",
-    "        readTable(connection)\n",
+    "        return connection\n",
     "\n",
     "    except Error as e:\n",
+    "        cursor.close()\n",
     "        print(\"Error while connecting to MySQL\", e)\n",
-    "    finally:\n",
-    "        if (connection.is_connected()):\n",
-    "            cursor.close()\n",
-    "            connection.close()\n",
-    "            print(\"MySQL connection is closed\")"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dbCloseConn(dbConnection):\n",
+    "\n",
+    "   \n",
+    "    try:\n",
+    "        if (dbConnection.is_connected()):\n",
+    "            dbConnection.close()\n",
+    "            print(\"\\nClosed MySQL connection.\")\n",
+    "           \n",
+    "    except Error as e:\n",
+    "        print(\"Error while closing\", e)\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,21 +137,18 @@
     "    try:\n",
     "        _query = \"select * from pet\" #Somebody created a pet table\n",
     "        dataFrame = pd.read_sql(_query, dbConnection); \n",
-    "        print(\"All the data queried: \\n\", dataFrame)\n",
+    "        print(\"\\nAll the data queried: \\n\", dataFrame)\n",
     "    except Error as e:\n",
     "        print(\"Error while reading\", e)\n",
     "\n",
-    "    except Exception as ex:   \n",
-    "        print(ex)\n",
-    "    finally:\n",
-    "        print(\"Finished Reading\")\n",
+    "\n",
     "        \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -143,20 +156,31 @@
      "output_type": "stream",
      "text": [
       "....Trying to Connect\n",
-      "....Connection function executed\n",
       "Connected to MySQL Server version  5.7.25-28-log\n",
-      "You're connected to database:  ('db27bvsdruzh45',)\n",
+      "\n",
+      "Successfully connected to database:  ('db27bvsdruzh45',)\n",
+      "\n",
       "All the data queried: \n",
       "      name  owner species sex birth death\n",
       "0  sparky  Marty     dog   M  None  None\n",
       "1   rover   John     dog   F  None  None\n",
-      "Finished Reading\n",
-      "MySQL connection is closed\n"
+      "\n",
+      "Closed MySQL connection.\n"
      ]
     }
    ],
    "source": [
-    "dbConnect()\n"
+    "#read config file - get back a dict\n",
+    "configDict = readConfig() \n",
+    "\n",
+    "#connect to database get back a dbConnection object\n",
+    "dbConn = dbConnect(configDict)  \n",
+    "\n",
+    "#read data by with a simple select all\n",
+    "readTable(dbConn)\n",
+    "\n",
+    "#close connection\n",
+    "dbCloseConn(dbConn)\n"
    ]
   },
   {
