Added a new table

--- a/experimental code/TestFileDBConnect.ipynb
+++ b/experimental code/TestFileDBConnect.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,14 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "def readTable(dbConnection):\n",
     "    \n",
     "    try:\n",
-    "        _query = \"select * from pet\" #Somebody created a pet table\n",
+    "        _query = \"select * from 42fire limit 10;\" #John created this table\n",
+    "        #_query = \"select * from pet;\"\n",
+    "        \n",
     "        dataFrame = pd.read_sql(_query, dbConnection); \n",
     "        print(\"\\nAll the data queried: \\n\", dataFrame)\n",
     "    except Error as e:\n",
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -161,9 +163,29 @@
       "Successfully connected to database:  ('db27bvsdruzh45',)\n",
       "\n",
       "All the data queried: \n",
-      "      name  owner species sex birth death\n",
-      "0  sparky  Marty     dog   M  None  None\n",
-      "1   rover   John     dog   F  None  None\n",
+      "    latitude  longitude bright_ti4  scan track    acq_date acq_time satellite  \\\n",
+      "0  40.39339  -79.85433      334.5  0.46  0.63  2012-01-20     0619         N   \n",
+      "1  39.21451  -76.47873      328.7  0.59  0.53  2012-01-20     0619         N   \n",
+      "2  39.21748  -76.47753      328.3  0.59  0.53  2012-01-20     0619         N   \n",
+      "3  36.58757  -78.58813        298  0.37  0.58  2012-01-20     0620         N   \n",
+      "4   37.3537  -77.32359        298  0.63  0.54  2012-01-20     0620         N   \n",
+      "5  37.34866  -77.32417      295.3  0.63  0.54  2012-01-20     0620         N   \n",
+      "6  36.35639  -76.80846      298.9  0.58  0.52  2012-01-20     0620         N   \n",
+      "7  37.18184  -77.44683        304  0.32  0.55  2012-01-20     0620         N   \n",
+      "8  35.47948  -76.78715      296.8  0.57  0.52  2012-01-20     0620         N   \n",
+      "9  35.42217   -78.3699      299.5  0.35  0.56  2012-01-20     0620         N   \n",
+      "\n",
+      "  instrument confidence version bright_ti5  frp type  \n",
+      "0      VIIRS          n       1      265.8    5    2  \n",
+      "1      VIIRS          n       1      271.7  5.2    2  \n",
+      "2      VIIRS          n       1      272.9  5.5    2  \n",
+      "3      VIIRS          n       1      272.2  1.8    0  \n",
+      "4      VIIRS          n       1      267.8  1.3    0  \n",
+      "5      VIIRS          n       1      268.4  1.3    0  \n",
+      "6      VIIRS          n       1        276  1.2    3  \n",
+      "7      VIIRS          n       1      274.1  0.7    2  \n",
+      "8      VIIRS          n       1      273.7  1.1    0  \n",
+      "9      VIIRS          n       1      273.4  0.5    0  \n",
       "\n",
       "Closed MySQL connection.\n"
      ]
