Now use py Module to Connect

--- a/experimental code/TestFileDBConnect.ipynb
+++ b/experimental code/TestFileDBConnect.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "## Connect to Cloud Datebase MYSQL Using Note book\n",
+    "<i> Put the config1 file in your exeucting direcotry to connect to db\n",
     "\n",
     "### First install MYSQL Connect: \n",
     "<i> pip install mysql-connector-python </i>\n",
@@ -17,126 +18,30 @@
     "\n",
     "1.  Connect to DB\n",
     "2.  Print out DB info\n",
-    "3.  Execute a Query (Will skip as database has no data)\n",
+    "3.  Execute a Query \n",
     "4.  Close Connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mysql.connector\n",
-    "from mysql.connector import Error\n",
-    "import configparser\n",
     "import pandas as pd\n",
-    "\n",
-    "\n",
-    "\n"
+    "import config1 \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def readConfig():  #return a dict of config params\n",
-    "\n",
-    "    try:\n",
-    "        config = configparser.ConfigParser()\n",
-    "        config.read('config.ini')\n",
-    "    \n",
-    "        host1 = config['mysqlDB']['host']\n",
-    "        user1 = config['mysqlDB']['user']\n",
-    "        passwd1 = config['mysqlDB']['pass']\n",
-    "        db1 = config['mysqlDB']['db']\n",
-    "        \n",
-    "        config1 = {\n",
-    "          'user': config['mysqlDB']['user'],\n",
-    "          'password': config['mysqlDB']['pass'],\n",
-    "          'host': config['mysqlDB']['host'],\n",
-    "          'database': config['mysqlDB']['db'],\n",
-    "          'raise_on_warnings': True\n",
-    "        }\n",
-    "        \n",
-    "        return config1\n",
-    "     \n",
-    "        \n",
-    "    except Error as e:\n",
-    "        print(\"Error while reading file\", e)\n",
-    "    \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dbConnect(configDict):\n",
-    "\n",
-    "   \n",
-    "    try:\n",
-    "   \n",
-    "        print(\"....Trying to Connect\")\n",
-    "        connection = mysql.connector.connect(host = configDict['host'],\n",
-    "                                         database = configDict['database'],\n",
-    "                                         user = configDict['user'],\n",
-    "                                         password = configDict['password'])\n",
-    "        \n",
-    "        \n",
-    "        if connection.is_connected():\n",
-    "            db_Info = connection.get_server_info()\n",
-    "            print(\"Connected to MySQL Server version \", db_Info)\n",
-    "        \n",
-    "        cursor = connection.cursor()\n",
-    "        cursor.execute(\"select database();\")\n",
-    "        record = cursor.fetchone()\n",
-    "        cursor.close()\n",
-    "        print(\"\\nSuccessfully connected to database: \", record)\n",
-    "        \n",
-    "        return connection\n",
-    "\n",
-    "    except Error as e:\n",
-    "        cursor.close()\n",
-    "        print(\"Error while connecting to MySQL\", e)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dbCloseConn(dbConnection):\n",
-    "\n",
-    "   \n",
-    "    try:\n",
-    "        if (dbConnection.is_connected()):\n",
-    "            dbConnection.close()\n",
-    "            print(\"\\nClosed MySQL connection.\")\n",
-    "           \n",
-    "    except Error as e:\n",
-    "        print(\"Error while closing\", e)\n",
-    "    \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def readTable(dbConnection):\n",
+    "def printTenRows(dbConnection):\n",
     "    \n",
     "    try:\n",
     "        _query = \"select * from 42fire limit 10;\" #John created this table\n",
-    "        #_query = \"select * from pet;\"\n",
     "        \n",
     "        dataFrame = pd.read_sql(_query, dbConnection); \n",
     "        print(\"\\nAll the data queried: \\n\", dataFrame)\n",
@@ -150,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,17 +97,14 @@
     }
    ],
    "source": [
-    "#read config file - get back a dict\n",
-    "configDict = readConfig() \n",
-    "\n",
     "#connect to database get back a dbConnection object\n",
-    "dbConn = dbConnect(configDict)  \n",
+    "dbConn = config1.dbConnect()\n",
     "\n",
-    "#read data by with a simple select all\n",
-    "readTable(dbConn)\n",
+    "#read data by with a simple select 10 rows\n",
+    "printTenRows(dbConn)\n",
     "\n",
     "#close connection\n",
-    "dbCloseConn(dbConn)\n"
+    "config1.dbCloseConn(dbConn)\n"
    ]
   },
   {
